--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 beautifulsoup4==4.12.3
-Flask==3.1.0
+Flask==2.2.5
 mlxtend==0.23.3
 numpy==2.2.2
 pandas==2.2.3
 psycopg2==2.9.10
+pytest==8.3.4
 Requests==2.32.3
 scikit_learn==1.6.1
 sentence_transformers==3.3.1
-SQLAlchemy==2.0.37
+SQLAlchemy==1.4.54
