Added db_setup step

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,6 +46,9 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Create Database Schema and Insert Data
+        run: python db_setup.py
+
       - name: Run Tests
         run: pytest
         
