Check folders/files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,8 +46,11 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Debug Working Directory
+        run: pwd && ls -la
+
       - name: Create Database Schema and Insert Data
-        run: python db_setup.py
+        run: python ./db_setup.py
 
       - name: Run Tests
         run: pytest
