--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     services:
@@ -55,10 +55,36 @@ jobs:
       - name: Run Tests
         run: pytest
         
-  deploy:
-    needs: build  # Exécute après le job "build"
+  deploy-build:
+    needs: test  # Exécute après le job "test"
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to server
-        run: echo "Déploiement en cours..."  # Ajoute ici la vraie commande de déploiement
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/rec-app:latest
+
+  deploy:
+    needs: deploy-build  # Exécute après le job "deploy-build"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v4
+        with:
+          image: youxise/rec-app
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
