--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Debug
-        run : pwd && ls -l
+        run : pwd && ls -la
               find . -name "Dockerfile"
         
       - name: Build and Push Docker Image
