--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -82,8 +82,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Debug
-        run : pwd && ls -la
-              find . -name "Dockerfile"
+        run : pwd && ls -la && find . -name "Dockerfile"
         
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
