--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,15 +42,30 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: .venv
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          poetry install --with dev
 
       - name: Create Database Schema and Insert Data
-        run: python src/db_setup.py
+        run: poetry run python src/db_setup.py
 
       - name: Run Tests
-        run: pytest
+        run: poetry run pytest
         
   deploy-build:
     needs: test  # Exécute après le job "test"
