--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 beautifulsoup4==4.13.0
 Flask==3.1.0
+Flask-CORS==5.0.0
+Flask-Limiter==3.8.0
 mlxtend==0.23.3
 numpy==2.2.2
 pandas==2.2.3
-psycopg2==2.9.10
-pytest==8.3.4
+psycopg2-binary==2.9.10
+python-dotenv==1.0.0
 Requests==2.32.3
 scikit_learn==1.6.1
 sentence_transformers==3.3.1
-SQLAlchemy==2.0
+SQLAlchemy==2.0.36
+pytest==8.3.4
+pytest-cov==6.0.0
